[gd_scene load_steps=10 format=3 uid="uid://cjadhu3y22px2"]

[ext_resource type="Script" path="res://src/scenes/battle_scene.gd" id="1_2ge4k"]
[ext_resource type="Texture2D" uid="uid://cgf6u0g3wcb7e" path="res://assets/sprites/env/grass_sky.png" id="2_2fgqw"]
[ext_resource type="Texture2D" uid="uid://b1xv0nfsg2kml" path="res://assets/sprites/env/grass_clouds_back_layer2.png" id="3_ullqu"]
[ext_resource type="Texture2D" uid="uid://hequuj88t1g0" path="res://assets/sprites/env/grass_clouds_back_layer1.png" id="4_y42ly"]
[ext_resource type="Texture2D" uid="uid://ctggvrujj1eg2" path="res://assets/sprites/env/grass_mountains.png" id="5_ukkpy"]
[ext_resource type="Texture2D" uid="uid://1xpuxquy5jj7" path="res://assets/sprites/env/grass_coluds_small.png" id="6_s2onw"]
[ext_resource type="Texture2D" uid="uid://bv6nr7x5jrobq" path="res://assets/sprites/env/grass_trees.png" id="7_cxmis"]
[ext_resource type="TileSet" uid="uid://dd5it3fci4tvk" path="res://game_resources/tilesets/level_tileset.tres" id="8_2qah2"]
[ext_resource type="SpriteFrames" uid="uid://c71of80kg874k" path="res://game_resources/sprite_frames/sprite_frames_knight.tres" id="9_vllym"]

[node name="BattleScene" type="Node2D" node_paths=PackedStringArray("battlers_node")]
script = ExtResource("1_2ge4k")
battlers_node = NodePath("Battlers")

[node name="Background" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer1" type="ParallaxLayer" parent="Background/ParallaxBackground"]

[node name="GrassSky" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer1"]
position = Vector2(0, -140)
texture = ExtResource("2_2fgqw")
centered = false

[node name="GrassCloudsBackLayer2" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer1"]
position = Vector2(0, -140)
texture = ExtResource("3_ullqu")
centered = false

[node name="GrassCloudsBackLayer1" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer1"]
position = Vector2(0, -140)
texture = ExtResource("4_y42ly")
centered = false

[node name="GrassMountains" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer1"]
position = Vector2(0, -140)
texture = ExtResource("5_ukkpy")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_mirroring = Vector2(960, 540)

[node name="GrassColudsSmall" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer2"]
position = Vector2(0, -140)
texture = ExtResource("6_s2onw")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Background/ParallaxBackground"]

[node name="GrassTrees" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer3"]
position = Vector2(0, -140)
texture = ExtResource("7_cxmis")
centered = false

[node name="TileMap" type="TileMap" parent="Background"]
tile_set = ExtResource("8_2qah2")
format = 2
layer_0/tile_data = PackedInt32Array(524288, 589824, 3, 524289, 589824, 3, 524290, 589824, 3, 524291, 589824, 3, 524292, 589824, 3, 524293, 589824, 3, 524294, 589824, 3, 524295, 589824, 3, 524296, 589824, 3, 524297, 589824, 3, 524298, 589824, 3, 524299, 589824, 3, 524300, 589824, 3, 524301, 589824, 3, 524302, 589824, 3, 589823, 524288, 3, 524303, 720896, 3, 458754, 589824, 2, 458755, 589824, 2, 458756, 589824, 2, 458757, 589824, 2, 458758, 589824, 2, 458759, 589824, 2, 458760, 589824, 2, 458761, 589824, 2, 458762, 589824, 2, 458763, 589824, 2, 458764, 589824, 2, 458765, 589824, 2, 458766, 589824, 2, 458767, 720896, 2, 458753, 589824, 2, 458752, 589824, 2, 524287, 524288, 1, 393216, 655360, 0, 458751, 524288, 0, 393217, 655360, 0, 393218, 655360, 0, 393219, 655360, 0, 393220, 655360, 0, 393221, 655360, 0, 393222, 655360, 0, 393223, 655360, 0, 393224, 655360, 0, 393225, 655360, 0, 393226, 655360, 0, 393227, 655360, 0, 393228, 655360, 0, 393229, 655360, 0, 393230, 655360, 0, 393231, 720896, 0)

[node name="Battlers" type="Marker2D" parent="."]
position = Vector2(0, 390)
gizmo_extents = 100.0

[node name="Test" type="Node2D" parent="."]
visible = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Test"]
position = Vector2(510, 290)
sprite_frames = ExtResource("9_vllym")
animation = &"idle"
offset = Vector2(0, -48)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -147.0
offset_bottom = 91.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 60
text = "Back"

[connection signal="pressed" from="CanvasLayer/Control/BackButton" to="." method="_on_back_button_pressed"]
